avoid some gotos in dumped path programs